# google_material_design_icons_bin

./: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
data/: material_design_icons_alpha.lz4
src/: lib.rs  material_icons.rs
tests/: api.rs
